--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "engines": {
+    "node": "14.17.1",
+    "npm": "6.14.13"
+ },
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
